--- a/views/mylinks.ejs
+++ b/views/mylinks.ejs
@@ -71,7 +71,7 @@
         </div>
 
         <%- include('./partials/scripts') -%>
-        <script src="/js/test.js"></script>
+        <script src="/js/copylinks.js"></script>
     </body>
 
     <%- include('./partials/footer') -%>
